[gd_scene load_steps=5 format=2]

[ext_resource path="res://new_dynamicfont48.tres" type="DynamicFont" id=1]
[ext_resource path="res://Buttons/StartButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Buttons/QuitButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://TitleScreen.gd" type="Script" id=4]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 4 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 64.0
margin_top = 32.0
margin_right = 960.0
margin_bottom = 544.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu"]
margin_right = 896.0
margin_bottom = 135.0
custom_fonts/font = ExtResource( 1 )
text = "PROJECT MASLOW"
align = 1

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 139.0
margin_right = 896.0
margin_bottom = 512.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_left = 268.0
margin_right = 628.0
margin_bottom = 373.0
alignment = 1

[node name="StartButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 84.0
margin_right = 360.0
margin_bottom = 184.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 360, 100 )

[node name="Label" parent="Menu/CenterRow/Buttons/StartButton" index="0"]
margin_left = 100.0
margin_top = 1.0
margin_right = 272.0
margin_bottom = 92.0
text = "START"

[node name="QuitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 188.0
margin_right = 360.0
margin_bottom = 288.0
rect_min_size = Vector2( 360, 100 )
align = 0

[node name="Label" parent="Menu/CenterRow/Buttons/QuitButton" index="0"]
margin_left = 116.0
margin_top = -7.0
margin_right = 257.0
margin_bottom = 84.0
text = "QUIT"
[connection signal="pressed" from="Menu/CenterRow/Buttons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]

[editable path="Menu/CenterRow/Buttons/StartButton"]

[editable path="Menu/CenterRow/Buttons/QuitButton"]
